@@ -9,6 +9,7 @@
 	produces.
 	verbatiminclude is now a $raw command argument distinct from 
 	verbatim.
+	Don't close out file, to let user code close it without erroring.
 
 2009-04-23   Patrice Dumas  <dumas@centre-cired.fr>
 
